# FLIPPED

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MacOS.yml  OnlyBuild_x64 .bat  PKGBUILD  README.md  README.zh_CN.md  build.bat  buildToVS2017.bat  build_Package_x64 .bat  main.cpp  rectcalcu.cpp  rectcalcu.h  setup-user-x86.iss  setup-user.iss  updateI18N.bat
.github - 副本/workflows/: ubuntu.yml  windows.yml
.github/workflows/: Linux.yml  LinuxDeb.yml  MacOS.yml  MacOS10.15.yml  Windows.yml  android.yml  ios.yml  linux.yml  mac.yml  macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
Acrylic/: CMakeLists.txt  README.md  acrylic.cpp  acrylic.h
Demo/: exwidget.cpp  exwidget.h
SysScreen/: sysscreen.cpp  sysscreen.h
WinScreen/: winfullscreen.cpp  winfullscreen.h
config/: log4qt.conf
debian/: README.Debian  README.source  changelog  control  copyright  files  flipped.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  picshot.cron.d.ex  picshot.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian_portable/: ldd.sh
docs/: index.md  index.zh_CN.md
i18n/: zh_CN.ts  zh_TW.ts
pluginsimpl/watemark/: CMakeLists.txt  pluginwatemark.cpp  pluginwatemark.h  watemark.json  watemarkitem.cpp  watemarkitem.h  watemarkplugin.cpp  watemarkplugin.h
src/: CMakeLists 过滤后添加分组.txt  CMakeLists.txt  Resources.qrc  logo.rc  main.cpp  rectcalcu.cpp  xglobal.h
src/WinScreen/: rectcalcu.cpp  rectcalcu.h  tary.cpp  tary.h  tray.cpp  tray.h  winfullscreen.cpp  winfullscreen.h  winmain.cpp  winmain.h  winresetbtn.cpp  winresetbtn.h
src/config/: config.ini
src/core/: arrowline.cpp  arrowline.h  isingleton.h  tsingleton.cpp  tsingleton.h  xlog.cpp  xlog.h  xqtlog.cpp  xqtlog.h
src/core/xlog/: xlog.h
src/data/config/: config.ini  default.ini
src/data/translations/: en_US.ts  zh_CN.ts  zh_TW.ts
src/data/translations/Archived/: zh_CN.ts
src/example/: exwidget.cpp  exwidget.h
src/i18n/: es_US.ts
src/platform/: iwininfo.cpp  iwininfo.h  wininfo.cpp  wininfo.h  wininfo_win.cpp  wininfo_win.h  wininfo_x11.cpp  wininfo_x11.h  xtype.cpp  xtype.h
src/pluginsinterface/: iplugininterface.cpp  iplugininterface.h
src/preference/: appellation.cpp  appellation.h  hotkeyswidget.cpp  hotkeyswidget.h  preference.cpp  preference.h  prefmanage - Copy.ui  prefmanage.cpp  prefmanage.h  prefmanage.ui  resetbtn.cpp  resetbtn.h
src/preference/UIWidget/: prefmanage - Copy.ui  prefmanage.cpp  prefmanage.h  prefmanage.ui  prefmanage=.ui  tababout.cpp  tababout.h  tababout.ui  tabgeneral.cpp  tabgeneral.h  tabgeneral.ui  tabhotkeys.cpp  tabhotkeys.h  tabhotkeys.ui  tabinterface.cpp  tabinterface.h  tabinterface.ui  taboutput.cpp  taboutput.h  taboutput.ui  tabpin.cpp  tabpin.h  tabpin.ui  untitled.ui
src/resources/changelog/: changelog.txt
src/resources/config/: config.ini
src/resources/licenses/: License.md
src/screen/: datamaid.cpp  datamaid.h  drawhelper.cpp  drawhelper.h  drawtoolbar.cpp  drawtoolbar.h  hotkeysvs.cpp  hotkeysvs.h  rectcalcu.cpp  rectcalcu.h  screenshot.cpp  screenshot.h  subabslinetoolbar.cpp  subabslinetoolbar.h  subabstoolbar.cpp  subabstoolbar.h  subellipsetoolbar.cpp  subellipsetoolbar.h  subgraptoolbar.cpp  subgraptoolbar.h  submosaictoolbar.cpp  submosaictoolbar.h  subrecttoolbar.cpp  subrecttoolbar.h  subtexttoolbar.cpp  subtexttoolbar.h  tray.cpp  tray.h  wincolorpick.cpp  wincolorpick.h  winresetbtn.cpp  winresetbtn.h  winsetting.cpp  winsetting.h
src/syswininfo/: syswininfo.cpp  syswininfo.h  syswininfo_win.cpp  syswininfo_win.h
src/tool/: frametoolbar.cpp  frametoolbar.h  managetoolbar.cpp  managetoolbar.h  parameterbar.cpp  parameterbar.h  selectbar.cpp  selectbar.h  testbtstyle.cpp  testbtstyle.h
src/tool/base/: blurwidget.cpp  blurwidget.h  colorparabar.cpp  colorparabar.h  frametoolbar.cpp  frametoolbar.h  managebar.cpp  managebar.h  widthparabar.cpp  widthparabar.h
src/tool/magnifier/: magnifier.cpp  magnifier.h
src/tool/pin/: pinwidget.cpp  pinwidget.h
src/tool/selectsize/: selectsize.cpp  selectsize.h
src/translations/: en_US.ts  zh_CN.ts  zh_TW.ts
src/widget/: xcombobox.cpp  xcombobox.h  xframelesswidget.cpp  xframelesswidget.h  xframewidget.cpp  xframewidget.h  xhorizontalline.cpp  xhorizontalline.h  xkeysequenceedit.cpp  xkeysequenceedit.h  xlabel.cpp  xlabel.h  xroundwidget.cpp  xroundwidget.h  xtextwidget.cpp  xtextwidget.h  xverticalline.cpp  xverticalline.h
src/wininfo/: iwininfo.cpp  iwininfo.h  syswin.cpp  syswin.h  wininfo.cpp  wininfo.h  wininfo_win.cpp  wininfo_win.h  wininfo_x11.cpp  wininfo_x11.h  xtype.h
src/winscreen/: drawhelper.cpp  drawhelper.h  drawtoolbar.cpp  drawtoolbar.h  rectcalcu.h  screenshot.cpp  screenshot.h  subabslinetoolbar.cpp  subabslinetoolbar.h  subabstoolbar.cpp  subabstoolbar.h  subarrowtoolbar.cpp  subarrowtoolbar.h  subellipsetoolbar.cpp  subellipsetoolbar.h  subgraptoolbar.cpp  subgraptoolbar.h  sublinetoolbar.cpp  sublinetoolbar.h  submosaictoolbar.cpp  submosaictoolbar.h  subrecttoolBar.cpp  subrecttoolbar.cpp  subrecttoolbar.h  subtexttoolbar.cpp  subtexttoolbar.h  tray.cpp  tray.h  wincolorpick.cpp  wincolorpick.h  windrawrect.cpp  windrawrect.h  windrawtool.cpp  windrawtool.h  winfullscreen.cpp  winfullscreen.h  winmain.cpp  winmain.h  wintoolbar.cpp  wintoolbar.h  (+2 more)
tech.xmuli.flipped/: linglong.yaml
test/: CMakeLists.txt  widget.h
