# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2021-2024 XMuli
# SPDX-GitHub: https://github.com/SunnyScreenshot/FLIPPED
# SPDX-Author: XMuli <xmulitech@gmail.com>

cmake_minimum_required(VERSION 3.5)
project(FILPPE)
add_subdirectory(src)
#add_subdirectory(pluginsimpl/watemark)
add_subdirectory(3rdparty/QHotkey)
